[gd_scene load_steps=19 format=2]

[ext_resource path="res://graphics/icon/Polygon.png" type="Texture" id=1]
[ext_resource path="res://graphics/icon/keyboardPixelIcon.png" type="Texture" id=2]
[ext_resource path="res://components/themes/panel.tres" type="Theme" id=3]
[ext_resource path="res://components/Scenes/keyBoard/keyBoard.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "mov"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("icon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.28 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.9643, 6.41846 ), Vector2( 1.964, 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("iconPerspective:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.39 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.9643, 5.61231 ), Vector2( 1.964, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "movBack"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("icon:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.29 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.964, 3 ), Vector2( 1.9643, 6.41846 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("iconPerspective:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.37 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.964, 1 ), Vector2( 1.9643, 5.61231 ) ]
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 159, 211 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 159, 0, 159, 211 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 318, 0, 159, 211 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 477, 0, 159, 211 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 636, 0, 159, 211 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=9]
resource_name = "Back"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.02, 0.49 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 489 ), Vector2( 0, 730 ) ]
}

[sub_resource type="Animation" id=10]
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.33, 0.55, 0.72, 0.87, 0.91, 0.95, 1 ),
"transitions": PoolRealArray( 1, 0.659754, 1.31951, 0.659754, 1.56917, 1, 1.36604, 1 ),
"update": 0,
"values": [ Vector2( 0, -101 ), Vector2( 0, 489 ), Vector2( 0, 449 ), Vector2( 0, 489 ), Vector2( 0, 459 ), Vector2( 0, 489 ), Vector2( 0, 469 ), Vector2( 0, 489 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "Back"
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.72 ),
"transitions": PoolRealArray( 0.659754, 1 ),
"update": 0,
"values": [ Vector2( 1039, 489 ), Vector2( 1039, 730 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:custom_constants/shadow_offset_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.732043, 1.8025 ),
"update": 0,
"values": [ 1, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.707107, 1.23114 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ) ]
}

[sub_resource type="Animation" id=12]
length = 3.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.15, 0.48, 0.7, 0.87, 1.02, 1.06, 1.1, 1.15 ),
"transitions": PoolRealArray( 1, 0.659754, 1.31951, 0.659754, 1.56917, 1, 1.36604, 1 ),
"update": 0,
"values": [ Vector2( 1039, -101 ), Vector2( 1039, 489 ), Vector2( 1039, 449 ), Vector2( 1039, 489 ), Vector2( 1039, 459 ), Vector2( 1039, 489 ), Vector2( 1039, 469 ), Vector2( 1039, 489 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:custom_constants/shadow_offset_y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.732043, 1.8025 ),
"update": 0,
"values": [ 1, 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.97, 1.35 ),
"transitions": PoolRealArray( 0.707107, 1.23114 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -17 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "hidden"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 82, 0 ), Vector2( 68.546, 787 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "mov"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 68.546, 787 ), Vector2( 82, 0 ) ]
}

[node name="keyBoard" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 82.0
margin_right = -82.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button" type="Button" parent="."]
margin_right = 44.0
margin_bottom = 60.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="NinePatchRect" parent="button"]
modulate = Color( 0.713726, 0.713726, 0.713726, 1 )
margin_left = 1.9643
margin_top = 6.41846
margin_right = 41.9643
margin_bottom = 46.4185
texture = ExtResource( 2 )

[node name="iconPerspective" type="NinePatchRect" parent="button"]
margin_left = 1.9643
margin_top = 5.61231
margin_right = 41.9643
margin_bottom = 45.6123
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="button"]
anims/mov = SubResource( 1 )
anims/movBack = SubResource( 2 )

[node name="buttonLeft" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = 10.0
margin_right = 127.0
margin_bottom = 141.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="buttonLeft"]
position = Vector2( 65.8751, 63.6821 )
scale = Vector2( 0.694823, 0.562062 )
frames = SubResource( 8 )

[node name="buttonLeft" type="Button" parent="buttonLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="buttonLeft"]
anims/Back = SubResource( 9 )
anims/mov = SubResource( 10 )

[node name="buttonRight" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.470588 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.0
margin_top = 10.0
margin_bottom = 141.0
mouse_default_cursor_shape = 2
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttonRight" type="Button" parent="buttonRight"]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="buttonRight"]
position = Vector2( 65.8751, 63.6821 )
scale = Vector2( 0.694823, 0.562062 )
frames = SubResource( 8 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="buttonRight"]
anims/Back = SubResource( 11 )
anims/mov = SubResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hidden = SubResource( 13 )
anims/mov = SubResource( 14 )

[connection signal="pressed" from="button" to="." method="_on_button_pressed"]
[connection signal="button_down" from="buttonLeft/buttonLeft" to="." method="_on_buttonLeft_button_down"]
[connection signal="button_up" from="buttonLeft/buttonLeft" to="." method="_on_buttonLeft_button_up"]
[connection signal="button_down" from="buttonRight/buttonRight" to="." method="_on_buttonRight_button_down"]
[connection signal="button_up" from="buttonRight/buttonRight" to="." method="_on_buttonRight_button_up"]
